<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.UserInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarImage"
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Avatar" />

            <TextView
                android:id="@+id/uploaderName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textAppearance="@style/Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="up主名字" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/followButton"

                style="@style/Button.ExtremeSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/follow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toBottomOf="@+id/uploaderName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:textAppearance="@style/Text"
            tools:text="LV6 硬核用户 年度大会员" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followerCount"
                android:textAppearance="@style/Text" />

            <TextView
                android:id="@+id/followerCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Text"
                tools:text="114514" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followCount"
                android:textAppearance="@style/Text" />

            <TextView
                android:id="@+id/followCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Text"
                tools:text="114514" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userId"
                android:textAppearance="@style/Text" />

            <TextView
                android:id="@+id/userId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textAppearance="@style/Text"
                tools:text="114514" />

        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/Text"
            tools:text="简介\n\n\n\n" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>