<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.VideoInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:text="标题" />

        <TextView
            android:id="@+id/description"
            style="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="6dp"
            android:textSize="12dp"
            tools:text="简介\n\n\n\n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <ImageView
                android:id="@+id/iconPlay"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/ic_baseline_play_circle_outline_24"
                android:theme="@style/VectorIcon" />

            <TextView
                android:id="@+id/viewCount"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12sp"
                tools:ignore="SmallSp"
                tools:text="11223344你好11111测试测试aaaaaaaaaaaaaaaaaaaa" />

        </LinearLayout>

        <TextView
            android:id="@+id/videoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingHorizontal="8dp"
            android:textAppearance="@style/Text"
            tools:text="av114514" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5"
                app:flow_wrapMode="aligned"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_baseline_thumb_up_24"
                    android:theme="@style/VectorIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_baseline_toll_24"
                    android:theme="@style/VectorIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_baseline_star_24"
                    android:theme="@style/VectorIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_favorite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_baseline_image_24"
                    android:theme="@style/VectorIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/view_cover" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_baseline_arrow_circle_down_24"
                    android:theme="@style/VectorIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <el.sft.bw.components.UserCardComponent
            android:id="@+id/userCard"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="6dp"
            android:clickable="true" />

        <ListView
            android:id="@+id/episodesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>