<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Biliw"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginEnd="-64dp"
        android:theme="@style/Drawer"
        tools:layout_gravity=""
        tools:layout_marginEnd="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatarImage"
                    app:layout_constraintTop_toBottomOf="@+id/uploaderName">

                    <ImageView
                        android:id="@+id/iconCoin"
                        android:layout_width="11dp"
                        android:layout_height="11dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_baseline_toll_24"
                        android:theme="@style/VectorIcon.Inverse"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/coinCount"
                        android:layout_width="wrap_content"
                        android:layout_height="12dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/Text.Drawer"
                        android:textSize="9sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iconAccount"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp"
                        tools:text="114.514" />

                </LinearLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatarImage"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/Avatar" />

                <TextView
                    android:id="@+id/uploaderName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textAppearance="@style/Text.Drawer"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatarImage"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="up主名字" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gotoHomePage"
                style="@style/Button.Small.Transparent"
                android:textAppearance="@style/Text.Drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_home_page" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gotoFavorite"
                style="@style/Button.Small.Transparent"
                android:textAppearance="@style/Text.Drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_favorite" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gotoSearch"
                style="@style/Button.Small.Transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                android:textAppearance="@style/Text.Drawer" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>